--- a/styles/style.css
+++ b/styles/style.css
@@ -132,15 +132,17 @@ p {
     text-align: left;
 }
 
-.buttom {
+.color-buttom {
     background-color: hsl(192, 100%, 9%);
+    color: white;
+}
+
+.buttom {
     display: grid;
     grid-template-columns: 350px 350px;
     grid-column-gap: 500px;
     justify-content: center;
     width: 100%;
-    height: 400px;
-    color: white;
     margin: auto;
 }
 
